# ups120-daemon

./: .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  lefthook.yml
.roo/: system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
src/: binrw_impls.rs  data_models.rs  lib.rs  main.rs  mqtt_handlers.rs  usb_handlers.rs  usb_types.rs  utils.rs
