[package]
name = "ups120-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusb = "0.9"
rumqttc = { version = "0.23", features = ["websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
binrw = "0.11"
uom = { version = "0.37", default-features = false, features = ["si", "f32", "std"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
